K1J-422: Update integration tests